<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/>
    </parent>

    <groupId>Lv-427.Java</groupId>
    <artifactId>greencity</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Green City</name>
    <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
    <packaging>pom</packaging>

    <modules>
        <module>service-api</module>
        <module>dao</module>
        <module>core</module>
        <module>service</module>
    </modules>

    <properties>
        <spring.boot.version>3.2.2</spring.boot.version>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <junit-jupiter.version>5.10.2</junit-jupiter.version>
        <mockito-junit-jupiter.version>5.10.0</mockito-junit-jupiter.version>
        <mockito-core.version>5.10.0</mockito-core.version>
        <mockito-inline.version>5.2.0</mockito-inline.version>
        <modelmapper.version>3.2.0</modelmapper.version>
        <checkstyle-maven-plugin.version>3.3.1</checkstyle-maven-plugin.version>
        <formatter.maven.plugin.version>2.23.0</formatter.maven.plugin.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.exclusions>
            **/config/*,
            **/enums/*,
            **/dto/*,
            **/exception/*,
            **/exceptions/*,
            **/entity/*,
            **/generated/**/*
        </sonar.exclusions>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.language>java</sonar.language>
        <test.containers.version>1.19.4</test.containers.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
        <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
        <net.java.dev.jna.version>5.14.0</net.java.dev.jna.version>
        <jjwt.version>0.12.5</jjwt.version>
        <sonar.maven.plugin.version>3.11.0.3922</sonar.maven.plugin.version>
        <sonar.sources>
            src/main/java
        </sonar.sources>
        <sonar.java.binaries>
            target/classes
        </sonar.java.binaries>
        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar.maven.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- Collects all individual jacoco.exec files from all sub-modules
                         and merges them into a single jacoco.exec in the root target directory. -->
                    <execution>
                        <id>merge-exec-files</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>merge</goal>
                        </goals>
                        <configuration>
                            <!-- This expression finds all 'jacoco.exec' files in the reactor modules' targets -->
                            <fileSets>
                                <fileSet>
                                    <directory>${project.basedir}</directory>
                                    <includes>
                                        <include>*/target/jacoco.exec</include>
                                    </includes>
                                </fileSet>
                            </fileSets>
                            <!-- Output file for the merged data -->
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                        </configuration>
                    </execution>
                    <!-- This execution runs the report-aggregate goal on the merged jacoco.exec file
                         to produce the target/site/jacoco-aggregate/jacoco.xml file expected by Sonar. -->
                    <execution>
                        <id>report-aggregate</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                        <configuration>
                            <!-- Sets the output directory to match the Sonar property in the workflow -->
                            <outputDirectory>${project.build.directory}/site/jacoco-aggregate</outputDirectory>
                            <outputEncoding>UTF-8</outputEncoding>
                        </configuration>
                    </execution>
                    <!-- Keep the default report execution (can be useful for local module reports) -->
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>${project.basedir}/../formatter.xml</configFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>

                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    </sourceDirectories>

                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
